// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon render successfully 1`] = `
<svg
  className="fui-icon"
>
  <use
    xlinkHref="#alipay"
  />
</svg>
`;

exports[`icon xxx1 1`] = `
<svg
  className="fui-icon"
>
  <use
    xlinkHref="#1"
  />
</svg>
`;
